# AgentStudyGuide

./: .env.example  .gitignore  README.md  pyproject.toml
01_foundations/: README.md
01_foundations/embeddings/: chunking_strategies.py  cosine_similarity.py  vector_search_demo.py
01_foundations/llm_basics/: hallucination_demo.py  prompting_strategies.py  temperature_demo.py
01_foundations/ml_concepts/: evaluation_metrics.py  rag_vs_finetuning.py
02_agentic_core/: README.md
02_agentic_core/memory/: episodic.py  long_term.py  semantic.py  short_term.py
02_agentic_core/patterns/: human_in_loop.py  plan_and_execute.py  react_agent.py
02_agentic_core/tool_use/: function_calling.py  sample_tools.py  tool_registry.py
03_system_design/: README.md  llm_gateway.py  observability.py  orchestrator.py  tool_registry.py
04_resiliency/: README.md  guardrails.py  loop_control.py  retry_strategies.py  structured_outputs.py
04_resiliency/evaluation/: golden_dataset.py  prompt_unit_tests.py
05_projects/: README.md
05_projects/project1_tool_agent/: README.md  agent.py  tools.py
05_projects/project2_rag/: README.md  api.py  ingest.py  rag_chain.py  retrieval.py
05_projects/project3_multi_agent/: README.md  executor.py  planner.py  validator.py  workflow.py
06_interview_prep/: README.md  common_questions.md  flashcards.md  system_design_templates.md
core/: __init__.py  client.py  logger.py  models.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AnnotatedText.tsx  CodeBlock.tsx  LessonView.tsx  Nav.tsx  Tooltip.tsx
web/data/: flashcards.ts  glossary.ts  lessons.ts  questions.ts  (+1 more)
(+8 files in other folders)
